--- a/Pages/alafrancaise.html
+++ b/Pages/alafrancaise.html
@@ -19,76 +19,81 @@
     </header>
 
     <main>
-        <section class="ImgResto">
-            <img src="../Assets/image/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image du restaurant">
-        </section>
         <section class="MenuResto">
-            <h2>À la française<i class="fa-regular fa-heart "></i></h2>
-
-            <h3>Entrées</h3>
-            <ul>
-                <li>
-                    <h4>Tartare de poulpe acidulé</h4>
-                    <p>Aux zestes d'orange</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Velouté de légumes d'antan</h4>
-                    <p>Carotte, panais, topinambour</p>
-                    <strong>35€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Soupe à l'oignon</h4>
-                    <p>Revisitée</p>
-                    <strong>20€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <h3>Plats</h3>
-            <ul>
-                <li>
-                    <h4>Coquilles Saint-Jacques</h4>
-                    <p>Accompagnées d'une purée de panais</p>
-                    <strong>40€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Magret de canard</h4>
-                    <p>Et parmentier de pommes de terre</p>
-                    <strong>35€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Pigeonneau d’Ille-et-Vilaine</h4>
-                    <p>Sur son lit de gnocchis aux légumes</p>
-                    <strong>44€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <h3>Desserts</h3>
-            <ul>
-                <li>
-                    <h4>Pétales de violettes glacés</h4>
-                    <p>Et purée de noisettes</p>
-                    <strong>18€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Fondant au chocolat</h4>
-                    <p>Revisité</p>
-                    <strong>22€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Millefeuille croustillant</h4>
-                    <p>Myrtilles et pâte d’amande</p>
-                    <strong>23€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <a class="btn btn--gradient btn--radius" href="#">commander</a>
+            <img class="MenuResto__img" src="../Assets/image/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="image du restaurant">
+            <div class="MenuResto__menu">
+                <h2>À la française
+                    <span class="RestoFav">
+                        <i class="far fa-heart cardFav-away"></i>
+                        <i class="fas fa-heart cardFav-hover"></i>
+                    </span>
+                </h2>
+                <h3>Entrées</h3>
+                <ul>
+                    <li class="list-item list-item--1">
+                        <h4>Tartare de poulpe acidulé</h4>
+                        <p>Aux zestes d'orange</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--2">
+                        <h4>Velouté de légumes d'antan</h4>
+                        <p>Carotte, panais, topinambour</p>
+                        <strong>35€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--3">
+                        <h4>Soupe à l'oignon</h4>
+                        <p>Revisitée</p>
+                        <strong>20€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <h3>Plats</h3>
+                <ul>
+                    <li class="list-item list-item--4">
+                        <h4>Coquilles Saint-Jacques</h4>
+                        <p>Accompagnées d'une purée de panais</p>
+                        <strong>40€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--5">
+                        <h4>Magret de canard</h4>
+                        <p>Et parmentier de pommes de terre</p>
+                        <strong>35€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--6">
+                        <h4>Pigeonneau d’Ille-et-Vilaine</h4>
+                        <p>Sur son lit de gnocchis aux légumes</p>
+                        <strong>44€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <h3>Desserts</h3>
+                <ul>
+                    <li class="list-item list-item--7">
+                        <h4>Pétales de violettes glacés</h4>
+                        <p>Et purée de noisettes</p>
+                        <strong>18€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--8">
+                        <h4>Fondant au chocolat</h4>
+                        <p>Revisité</p>
+                        <strong>22€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--9">
+                        <h4>Millefeuille croustillant</h4>
+                        <p>Myrtilles et pâte d’amande</p>
+                        <strong>23€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <a class="btn btn--gradient btn--radius" href="#">commander</a>
+            </div>
         </section>
 
     </main>
