--- a/Pages/ledelicesdessens.html
+++ b/Pages/ledelicesdessens.html
@@ -19,77 +19,83 @@
     </header>
 
     <main>
-        <section class="ImgResto">
-            <img src="../Assets/image/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="image du restaurant">
-        </section>
         <section class="MenuResto">
-            <h2>Le délice des sens<i class="fa-regular fa-heart "></i></h2>
+            <img class="MenuResto__img"
+                src="../Assets/image/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="image du restaurant">
+            <div class="MenuResto__menu">
+                <h2>Le délice des sens
+                    <span class="RestoFav">
+                        <i class="far fa-heart cardFav-away"></i>
+                        <i class="fas fa-heart cardFav-hover"></i>
+                    </span>
+                </h2>
 
-            <h3>Entrées</h3>
-            <ul>
-                <li>
-                    <h4>Tartare de thon</h4>
-                    <p>Assaisonné au yuzu</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Bouchée de homard croustillant</h4>
-                    <p>Et sa farandole de petits légumes</p>
-                    <strong>35€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Velouté de cèpes </h4>
-                    <p>Aux truffes</p>
-                    <strong>20€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <h3>Plats</h3>
-            <ul>
-                <li>
-                    <h4>Poulet rôti aux herbes de Provence </h4>
-                    <p>Et sa crème de truffe</p>
-                    <strong>40€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Langouste rôtie </h4>
-                    <p>Et ses légumes de saison</p>
-                    <strong>35€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Côte de bœuf Angus </h4>
-                    <p>Et sa purée de panais</p>
-                    <strong>44€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <h3>Desserts</h3>
-            <ul>
-                <li>
-                    <h4>Farandole de desserts</h4>
-                    <p>Du chef</p>
-                    <strong>18€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Crème brulée </h4>
-                    <p>Revisitée</p>
-                    <strong>22€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Tiramisu </h4>
-                    <p>À la noisette</p>
-                    <strong>23€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <a class="btn btn--gradient btn--radius" href="#">commander</a>
+                <h3>Entrées</h3>
+                <ul>
+                    <li class="list-item list-item--2">
+                        <h4>Tartare de thon</h4>
+                        <p>Assaisonné au yuzu</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--2">
+                        <h4>Bouchée de homard croustillant</h4>
+                        <p>Et sa farandole de petits légumes</p>
+                        <strong>35€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--3">
+                        <h4>Velouté de cèpes </h4>
+                        <p>Aux truffes</p>
+                        <strong>20€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <h3>Plats</h3>
+                <ul>
+                    <li class="list-item list-item--4">
+                        <h4>Poulet rôti aux herbes de Provence </h4>
+                        <p>Et sa crème de truffe</p>
+                        <strong>40€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--5">
+                        <h4>Langouste rôtie </h4>
+                        <p>Et ses légumes de saison</p>
+                        <strong>35€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--6">
+                        <h4>Côte de bœuf Angus </h4>
+                        <p>Et sa purée de panais</p>
+                        <strong>44€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <h3>Desserts</h3>
+                <ul>
+                    <li class="list-item list-item--7">
+                        <h4>Farandole de desserts</h4>
+                        <p>Du chef</p>
+                        <strong>18€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--8">
+                        <h4>Crème brulée </h4>
+                        <p>Revisitée</p>
+                        <strong>22€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--9">
+                        <h4>Tiramisu </h4>
+                        <p>À la noisette</p>
+                        <strong>23€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <a class="btn btn--gradient btn--radius" href="#">commander</a>
+            </div>
         </section>
 
     </main>
