--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
             <a class="btn btn--gradient btn--radius" href="#">Explorer nos restaurants</a>
         </section>
         <section class="SectionFonct">
-            <h3>Fonctionnement</h3>
+            <h2>Fonctionnement</h2>
             <ul>
-                <li><span>1</span><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
-                <li><span>2</span><i class="fa-solid fa-list"></i>Composez votre menu</li>
-                <li><span>3</span><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</li>
-
+                <li class="list-item">
+                    <p><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un
+                        restaurant</p>
+                </li>
+                <li class="list-item">
+                    <p><i class="fa-solid fa-list"></i>Composez votre menu</p>
+                </li>
+                <li class="list-item">
+                    <p><i class="fa-sharp fa-solid fa-store"></i>Dégustez au restaurant</p>
+                </li>
             </ul>
         </section>
         <section class="SectionResto">
@@ -51,7 +57,8 @@
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                             <span class="cardFav">
-                                <i class="fa-regular fa-heart  fa-xl"></i>
+                                <i class="far fa-heart cardFav-away"></i>
+                                <i class="fas fa-heart cardFav-hover"></i>
                             </span>
                         </div>
                     </a>
@@ -69,7 +76,8 @@
                             <h3 class="card-title">La note enchantée</h3>
                             <p class="card-subtitle">Charonne</p>
                             <span class="cardFav">
-                                <i class="fa-regular fa-heart  fa-xl"></i>
+                                <i class="far fa-heart cardFav-away"></i>
+                                <i class="fas fa-heart cardFav-hover"></i>
                             </span>
                         </div>
                     </a>
@@ -84,7 +92,8 @@
                             <h3 class="card-title">À la française</h3>
                             <p class="card-subtitle">Cité Rouge</p>
                             <span class="cardFav">
-                                <i class="fa-regular fa-heart  fa-xl"></i>
+                                <i class="far fa-heart cardFav-away"></i>
+                                <i class="fas fa-heart cardFav-hover"></i>
                             </span>
                         </div>
                     </a>
@@ -99,7 +108,8 @@
                             <h3 class="card-title">Le délice des sens</h3>
                             <p class="card-subtitle">Folie-Méricourt</p>
                             <span class="cardFav">
-                                <i class="fa-regular fa-heart  fa-xl"></i>
+                                <i class="far fa-heart cardFav-away"></i>
+                                <i class="fas fa-heart cardFav-hover"></i>
                             </span>
                         </div>
                     </a>
