--- a/Pages/lanoteenchantee.html
+++ b/Pages/lanoteenchantee.html
@@ -19,82 +19,88 @@
     </header>
 
     <main>
-        <section class="ImgResto">
-            <img src="../Assets/image/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image du restaurant">
-        </section>
         <section class="MenuResto">
-            <h2>La note enchantée<i class="fa-regular fa-heart "></i></h2>
+            <img class="MenuResto__img" src="../Assets/image/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="image du restaurant">
+            <div class="MenuResto__menu">
+                <h2>La note enchantée
+                    <span class="RestoFav">
+                        <i class="far fa-heart cardFav-away"></i>
+                        <i class="fas fa-heart cardFav-hover"></i>
+                    </span>
+                </h2>
 
-            <h3>Entrées</h3>
-            <ul>
-                <li>
-                    <h4>Ravioles de foie gras </h4>
-                    <p>Accompagnées de leur crème à la truffe</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Caviar osciètre </h4>
-                    <p>Sur blini à la farine de blé noir</p>
-                    <strong>35€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Homard et espuma de potiron</h4>
-                    <p>Marinés aux zestes d'orange</p>
-                    <strong>20€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Foie gras de canard cuit entier</h4>
-                    <p>Confiture de figue et pain toasté</p>
-                    <strong>35€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <h3>Plats</h3>
-            <ul>
-                <li>
-                    <h4>Noix de coquilles Saint-Jacques</h4>
-                    <p>Sur lit de purée de céleri-rave</p>
-                    <strong>40€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Langoustine poêlée</h4>
-                    <p>Purée de patate douce</p>
-                    <strong>35€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Mijoté de queue de bœuf </h4>
-                    <p>Et riz sauvage aux zestes de citron</p>
-                    <strong>44€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <h3>Desserts</h3>
-            <ul>
-                <li>
-                    <h4>Macaron noisette et chocolat</h4>
-                    <p>Glace au caramel brun et sel de Guérande</p>
-                    <strong>18€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Baba au rhum revisité </h4>
-                    <p>Avec son coulis de citron</p>
-                    <strong>22€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Tarte au citron meringuée </h4>
-                    <p>Déstructurée</p>
-                    <strong>23€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <a class="btn btn--gradient btn--radius" href="#">commander</a>
+                <h3>Entrées</h3>
+                <ul>
+                    <li class="list-item list-item--1">
+                        <h4>Ravioles de foie gras </h4>
+                        <p>Accompagnées de leur crème à la truffe</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--2">
+                        <h4>Caviar osciètre </h4>
+                        <p>Sur blini à la farine de blé noir</p>
+                        <strong>35€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--3">
+                        <h4>Homard et espuma de potiron</h4>
+                        <p>Marinés aux zestes d'orange</p>
+                        <strong>20€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--4">
+                        <h4>Foie gras de canard cuit entier</h4>
+                        <p>Confiture de figue et pain toasté</p>
+                        <strong>35€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <h3>Plats</h3>
+                <ul>
+                    <li class="list-item list-item--5">
+                        <h4>Noix de coquilles Saint-Jacques</h4>
+                        <p>Sur lit de purée de céleri-rave</p>
+                        <strong>40€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--6">
+                        <h4>Langoustine poêlée</h4>
+                        <p>Purée de patate douce</p>
+                        <strong>35€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--7">
+                        <h4>Mijoté de queue de bœuf </h4>
+                        <p>Et riz sauvage aux zestes de citron</p>
+                        <strong>44€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <h3>Desserts</h3>
+                <ul>
+                    <li class="list-item list-item--8">
+                        <h4>Macaron noisette et chocolat</h4>
+                        <p>Glace au caramel brun et sel de Guérande</p>
+                        <strong>18€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--9">
+                        <h4>Baba au rhum revisité </h4>
+                        <p>Avec son coulis de citron</p>
+                        <strong>22€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--10">
+                        <h4>Tarte au citron meringuée </h4>
+                        <p>Déstructurée</p>
+                        <strong>23€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <a class="btn btn--gradient btn--radius" href="#">commander</a>
+            </div>
         </section>
 
     </main>
@@ -108,6 +114,7 @@
                 <li>Contact</li>
 
             </ul>
+
         </section>
     </footer>
 </body>
