--- a/Pages/lapalettedugout.html
+++ b/Pages/lapalettedugout.html
@@ -19,76 +19,82 @@
     </header>
 
     <main>
-        <section class="ImgResto">
-            <img src="../Assets/image/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image du restaurant">
-        </section>
         <section class="MenuResto">
-            <h2>La palette du goût<i class="fa-regular fa-heart "></i></h2>
+            <img class="MenuResto__img" src="../Assets/image/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="image du restaurant">
+            <div class="MenuResto__menu">
+                <h2>La palette du goût
+                    <span class="RestoFav">
+                        <i class="far fa-heart cardFav-away"></i>
+                        <i class="fas fa-heart cardFav-hover"></i>
+                    </span>
+                </h2>
 
-            <h3>Entrées</h3>
-            <ul>
-                <li>
-                    <h4>Fricassée d'escargots</h4>
-                    <p>Au piment d'Espelette</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Foie gras de canard mi-cuit</h4>
-                    <p>Et ses copeaux de truffe noire</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Œuf au plat</h4>
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <h3>Plats</h3>
-            <ul>
-                <li>
-                    <h4>Filet de bœuf aux herbes</h4>
-                    <p>Accompagné de sa ribambelle de légumes</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Parmentier de queue de bœuf</h4>
-                    <p>À la truffe noire sur sa purée de panais</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Filet de turbot</h4>
-                    <p>Aux agrumes</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <h3>Desserts</h3>
-            <ul>
-                <li>
-                    <h4>Paris-Brest</h4>
-                    <p>Revisité</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Macaron au chocolat d'exception </h4>
-                    <p>Et glace à la vanille de Madagascar</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-                <li>
-                    <h4>Mousse au chocolat</h4>
-                    <p>Au piment d'Espelette et à la truffe noire</p>
-                    <strong>25€</strong>
-                    <span><i class="fas fa-check-circle"></i></span>
-                </li>
-            </ul>
-            <a class="btn btn--gradient btn--radius" href="#">commander</a>
+                <h3>Entrées</h3>
+                <ul>
+                    <li class="list-item list-item--1">
+                        <h4>Fricassée d'escargots</h4>
+                        <p>Au piment d'Espelette</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--2">
+                        <h4>Foie gras de canard mi-cuit</h4>
+                        <p>Et ses copeaux de truffe noire</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--3">
+                        <h4>Œuf au plat</h4>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <h3>Plats</h3>
+                <ul>
+                    <li class="list-item list-item--4">
+                        <h4>Filet de bœuf aux herbes</h4>
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--5">
+                        <h4>Parmentier de queue de bœuf</h4>
+                        <p>À la truffe noire sur sa purée de panais</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--6">
+                        <h4>Filet de turbot</h4>
+                        <p>Aux agrumes</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <h3>Desserts</h3>
+                <ul>
+                    <li class="list-item list-item--7">
+                        <h4>Paris-Brest</h4>
+                        <p>Revisité</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--8">
+                        <h4>Macaron au chocolat d'exception </h4>
+                        <p>Et glace à la vanille de Madagascar</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                    <li class="list-item list-item--9">
+                        <h4>Mousse au chocolat</h4>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
+                        <strong>25€</strong>
+                        <span><i class="fas fa-check-circle"></i></span>
+                    </li>
+                </ul>
+                <a class="btn btn--gradient btn--radius" href="#">commander</a>
+            </div>
         </section>
 
     </main>
