--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
 </head>
 
 <body>
+
+    <div class="loader">
+        <div class="lds-facebook">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+
     <header>
         <h1>OhmyFood</h1>
     </header>
 
     <main>
+
         <section class="SectionSearch">
             <h2><i class="fas fa-map-marker-alt"></i>Paris, Belleville</h2>
         </section>
@@ -42,7 +52,7 @@
             </ul>
         </section>
         <section class="SectionResto">
-            <h3>Restaurants</h3>
+            <h2>Restaurants</h2>
             <ul>
                 <li class="card">
                     <a href="Pages/lapalettedugout.html">
@@ -126,7 +136,7 @@
                 <li><i class="fa-sharp fa-solid fa-utensils"></i>Proposer un restaurant</li>
                 <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
                 <li>Mentions légales</li>
-                <li>Contact</li>
+                <li><a href="mailto:contactOhMyFood@gmail.com">Contact</a></li>
 
             </ul>
         </section>
